Eliminados bugs a la hora de busqueda. Se ha limpiado y ordenado mas codigo(En proceso)